change binary path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,13 @@ add_definitions(${EXTRA_DEFS})
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories($ENV{BOOST_ROOT})
+link_directories($ENV{BOOST_ROOT}/stage/lib)
+
 #include_directories($ENV{BOOST_ROOT}/libs)
 #find_library(boost_program_options /usr/local/lib)
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 ## system environment variable that is defined in ~/.profile
 MESSAGE(STATUS "BOOST_ROOT:         " 
