--- a/apps/asio/timer/CMakeLists.txt
+++ b/apps/asio/timer/CMakeLists.txt
@@ -24,4 +24,7 @@ target_link_libraries(
   )
 #target_compile_options( ${t0} PUBLIC -std=c++11 -fno-rtti)
 
-
+set_target_properties( ${t0} ${t1}
+	PROPERTIES
+	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/asio"
+)
