--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,4 @@
-#add_subdirectory(program_options)
+add_subdirectory(program_options)
 add_subdirectory(property_tree)
 add_subdirectory(asio)
+add_subdirectory(singleton)
